added mixins for tablet and desktop breakpoints

--- a/src/Styles/Partials/_resets.scss
+++ b/src/Styles/Partials/_resets.scss
@@ -13,5 +13,5 @@ body {
   font-size: 1.6rem;
   margin: 0;
   font-family: 'Titillium Web', sans-serif;
-  background-color: lightblue;
+  //background-color: lightblue;
 }
