--- a/src/Styles/Partials/_resets.scss
+++ b/src/Styles/Partials/_resets.scss
@@ -12,6 +12,6 @@ html {
 body {
   font-size: 1.6rem;
   margin: 0;
-  font-family: 'Titillium Web', sans-serif;
-  //background-color: lightblue;
+  font-family: 'Red Hat Display', sans-serif;
+  background-color: lightblue;
 }
