series section and header finished, working on formula 1 race page next!

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,13 @@
 @use "./Styles/Partials/resets";
 @use "./Styles/Partials/variables" as *; 
+@use "./Styles/Partials/mixins" as *;
+
+body{
+    background-color: lightblue;
+    @include tablet{
+      background-color: lightcoral;
+    }
+    @include desktop{
+        background-color: lightgreen;
+    }
+}
