finished race series cards as well as connected them to the specific race page. Backend call to specific race route called and data is printing (styling still to do)

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -17,7 +17,7 @@
     }
     @include desktop{
         max-width: 128rem;
-        margin: 0 auto
+        margin: 0 auto;
     }
     &__logo{
         width:7rem;
