--- a/src/Components/RaceCard/RaceCard.scss
+++ b/src/Components/RaceCard/RaceCard.scss
@@ -3,7 +3,7 @@
 
 
 .raceCard{
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
+    
     height:20rem;
     background-size: cover;
     background-repeat: no-repeat;
@@ -14,6 +14,7 @@
     display:flex;
     flex-direction: column;
     justify-content: flex-end;
+    z-index: 0;
     @include tablet{
         width:47%;
         height:30rem;
@@ -26,12 +27,15 @@
         font-weight: 600;
         font-size: 2rem;
         margin:0;
+        filter: brightness(100%);
+        
     }
     &__location{
         color:white;
         
         font-size: 1.5rem;
         margin:0;
+        
     }
     &__buttonWrapper{
         display: flex;
