final commit, all features working and styling fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,6 @@
 @use "./Styles/Partials/mixins" as *;
 
 body{
-    background-color: lightblue;
-    @include tablet{
-      background-color: lightcoral;
-    }
-    @include desktop{
-        background-color: lightgreen;
-    }
+    background-color: #808080;
+    
 }
